--- a/src/datasources/db.datasource.config.json
+++ b/src/datasources/db.datasource.config.json
@@ -1,7 +1,7 @@
 {
   "name": "db",
   "connector": "postgresql",
-  "url": "",
+  "url": "postgresql://wtcdb:7qnDgDeX4ZfacOSehO0vRzyfXePNfxn2@dpg-d3090u7diees73era8mg-a.oregon-postgres.render.com/casa_benetti_cy9b",
   "connectionTimeout": 30000,
   "acquireTimeout": 30000,
   "timeout": 30000
